ipc/ipdl/test/ipdl/error/PUniquePtrRecursive.ipdl
//error: bad syntax near `UniquePtr'

[ChildProc=any]
protocol PUniquePtrRecursive {
child: async Msg( UniquePtr< UniquePtr<int> > aa);
};
